--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,6 +1,6 @@
 name: Pylint
 
-on: [push, pull_request]
+on: [push, pull_request, commit]
 
 jobs:
   build:
@@ -10,6 +10,9 @@ jobs:
         python-version: ["3.8", "3.9", "3.10"]
     steps:
       - uses: actions/checkout@v3
+      - name: Copy requirements.txt file
+        run: |
+          cp requirements.txt $HOME/requirements.txt
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
@@ -17,10 +20,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install -r $HOME/requirements.txt
           pip install pylint
       - name: Copy pyproject.toml file
         run: |
           cp pyproject.toml $HOME/pyproject.toml
       - name: Analysing the code with pylint
         run: |
-          pylint --load-plugins pylint_pycharm $(git ls-files '*.py')
+          pylint --load-plugins pylint_pycharm --rcfile=$HOME/pyproject.toml $(git ls-files '*.py')
