--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,3 +3,9 @@ disable = ["C0114", "C0116", "C0115","W1203"]
 
 [tool.pylint]
 max-line-length = 120
+
+[tool.pytest.ini_options]
+testpaths = [
+    "tests"
+]
+pythonpath = "."
