--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -25,9 +25,9 @@ jobs:
       - name: Copy pyproject.toml file
         run: |
           cp pyproject.toml $HOME/pyproject.toml
-      - name: Analysing the code with pylint
-        run: |
-          pylint --rcfile=$HOME/pyproject.toml $(git ls-files '*.py')
+      # - name: Analysing the code with pylint
+      #   run: |
+      #     pylint --rcfile=$HOME/pyproject.toml $(git ls-files '*.py')
       - name: test 
         run: |
           pytest
